Fixes #1845 Span with label clips when wrapped on mobile

--- a/scss/foundation/components/_labels.scss
+++ b/scss/foundation/components/_labels.scss
@@ -21,7 +21,7 @@ $label-font-weight: bold !default;
   text-decoration: none;
   line-height: 1;
   white-space: nowrap;
-  display: inline;
+  display: inline-block;
   position: relative;
 }
 
